src/theme-gcwu-fegc/sass/includes/_default.scss
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt
 */
@import "compass/css3/inline-block";

%line-height-normal {
	line-height: normal;
}

#wb-head {
	@extend %line-height-normal;
}

#wb-foot {
	@extend %line-height-normal;
}

#wb-sec {
	@extend %line-height-normal;
}

%gcwu-default-hidden {
	clip: rect(1px, 1px, 1px, 1px);
	height: 0 !important;
	overflow: hidden !important;
	position: absolute;
	width: 0 !important;
	margin: 0 !important;
}

#gcwu-gcnb {
	h2 {
		@extend %gcwu-default-hidden;
	}
}

#gcwu-srchbx {
	label {
		@extend %gcwu-default-hidden;
	}
}

#gcwu-aside {
	h2 {
		@extend %gcwu-default-hidden;
	}
	img {
		@extend %gcwu-default-no-margin;
	}
	div {
		&#gcwu-priorities { //TODO: Overspecific for an ID rule?
			ul {
				list-style: none;
				margin: 0;
				padding: 0;
				li {
					margin: 0;
					padding: 0;
				}
			}
		}
	}
}

.gcwu-minister {
	margin-top: 10px;
	h2, h3 {
		@extend %gcwu-default-no-margin;
		@extend %gcwu-default-hidden;
	}
	img {
		padding-right: 5px;
		float: left;
		margin: 0;
	}
	p {
		margin: 0;
		padding: 10px 5px 10px 0;
		strong {
			font-weight: 700;
			color: #001D45;
		}
	}
	ul {
		list-style-type: none;
		padding-top: 17px;
		margin: 0;
		&:after {
			content: ".";
			display: block;
			height: 0;
			clear: both;
			visibility: hidden;
		}
	}
	li {
		padding-bottom: 8px;
		a {
			&:hover, &:focus, &:active {
				text-decoration: none;
			}
		}
	}
}

#gcwu-sft {
	h3 {
		@extend %gcwu-default-hidden;
	}
}

#gcwu-bc {
	h2 {
		@extend %gcwu-default-hidden;
	}
}

#gcwu-gcft {
	h3 {
		@extend %gcwu-default-hidden;
	}
}

#gcwu-date-mod {
	@extend %line-height-normal;
	dt, dd {
		float: left;
	}
	dd {
		margin: 0 0 0 10px;
	}
}

%gcwu-default-gray-no-border {
	color: #333;
	font-weight: 400;
	border: none;
	margin-bottom: 5px;
	font-size: 1.6em;
}

#gcwu-content {
	h2 {
		@extend %gcwu-default-gray-no-border;
	}
}

#gcwu-priorities {
	padding-bottom: 10px;
	border-bottom: 1px solid #000;
	h3 {
		@extend %gcwu-default-gray-no-border;
	}
	h2, h3 {
		@extend %gcwu-default-no-margin;
	}
	img {
		margin-bottom: 0;
	}
}

div {
	&#gcwu-headlines { //TODO: Overspecific for an ID rule?
		ul {
			&, li {
				list-style: none !important;
				margin: 0 !important;
				padding: 0 !important;
			}
		}
	}
}

%gcwu-default-a-font-100pct {
	a {
		font-size: 100%;
	}
}

#gcwu-video {
	@extend %gcwu-default-a-font-100pct;
}

#gcwu-headlines {
	ul {
		li {
			@extend %gcwu-default-a-font-100pct;
			h3, p {
				margin: 0;
				padding: 5px;
			}
			h3 {
				font-size: 1em;
				font-weight: 700;
			}
		}
	}
}

#gcwu-connect {
	h2 {
		border: none;
		margin-bottom: 5px;
		color: #333;
		float: left;
		margin-top: 2px;
		margin-right: 10px;
	}
	ul {
		list-style-type: none;
	}
	li {
		@include inline-block;
	}
	a {
		background: none;
		padding-right: 0;
		text-decoration: none;
	}
}

.gcwu-minister-in {
	min-height: 149px;
}

#gcwu-title {
	a {
		text-decoration: none;
	}
}

%gcwu-default-no-margin {
	margin-left: 0;
	margin-right: 0;
}

